# rise

./: Cargo.toml  README  README.md
src/: main.rs  neat.rs  rise.rs
src/neat/: genetics.rs  mod.rs  neurology.rs  taxonomy.rs
tests/: lib.rs
