[package]
name = "rise"
version = "0.1.0"
authors = ["Nick Tzaperas <nick@nijotz.com>"]

[[bin]]
name = "rise"
#path = "src/other.rs"

[dependencies]
nalgebra = "0.6.0"
piston = "0.17.0"
piston2d-graphics = "0.13.0"
pistoncore-glutin_window = "0.20.0"
piston2d-opengl_graphics = "0.23.0"
time = "0.1"
